[project]
name = "langgraph-complete-guide"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "langchain-aws>=1.6.2",
    "langchain-core>=1.4.8",
    "langgraph>=1.2.8",
    "langgraph-checkpoint>=4.1.1",
    "typing>=3.10.0.0",
]
